# object-oriented-programming-labs

./: .gitignore
oopL1/: ex1.ini  example.ini  example1.ini  main.cpp
oopL2/: AbstractProduct.h  CMakeLists.txt  Dispatcher.h  Product.h  ProductFactory.h  Shop.h  func.cpp  main.cpp
oopL3/: AirRace.h  AirTransport.h  AllTerrainBoots.h  BactrainCamel.h  Broom.h  Centaur.h  CombinedRace.h  LandRace.h  LandTransport.h  MagicCarpet.h  Mortar.h  Race.h  SpeedboatCamel.h  Transport.h  (+2 more)
oopL4.1/: AlgoGeneral.cpp  AlgoGeneral.h  AlgoSeparated.cpp  AlgoSeparated.h  Backup.cpp  Backup.h  BackupJob.cpp  BackupJob.h  CMakeLists.txt  CleanupAlgorithms.cpp  CleanupAlgorithms.h  CleanupByDate.cpp  CleanupByDate.h  CleanupByQuantity.cpp  CleanupByQuantity.h  CleanupBySize.cpp  CleanupBySize.h  CleanupHybrid.cpp  CleanupHybrid.h  FileInfo.cpp  FileInfo.h  FullPoint.cpp  FullPoint.h  IncPoint.cpp  IncPoint.h  RestorePoint.cpp  RestorePoint.h  StorageAlgorithms.cpp  StorageAlgorithms.h  main.cpp
oopL5/: AbstractClient.cpp  AbstractClient.h  AbstractCommand.cpp  AbstractCommand.h  Bank.cpp  Bank.h  BankAccount.cpp  BankAccount.h  Builder.cpp  Builder.h  CMakeLists.txt  CashCommand.cpp  CashCommand.h  Client.cpp  Client.h  ClientAddress.cpp  ClientAddress.h  ClientBuilder.cpp  ClientBuilder.h  ClientDecorator.cpp  ClientDecorator.h  ClientPassport.cpp  ClientPassport.h  CreditBankAccount.cpp  CreditBankAccount.h  DebitBankAccount.cpp  DebitBankAccount.h  DepositBankAccount.cpp  DepositBankAccount.h  RefillCommand.cpp  RefillCommand.h  TransferCommand.cpp  TransferCommand.h  main.cpp
(+43 files in other folders)
